syntax = "proto3";

package auction;

option go_package = "auction/auction";

message BidRequest {
    int32 id = 1;
    string name = 2;
    int64 amount = 3;
}

message BidResponse {}

message ResultRequest {}

message ResultResponse {
    int64 outcome = 1;

}

service Auction {
    rpc Bid(BidRequest) returns (BidResponse);
    rpc Result(ResultRequest) returns (ResultResponse);
}

message ElectionMessage {}

message CoordinatorMessage {
    int32 port = 1;
}

message Response { }

service Election {
    rpc Election(ElectionMessage) returns (Response);
    rpc Coordinator(CoordinatorMessage) returns (Response);
}